Fixed spacing on blanket page
Text was overlapping footer

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -260,40 +260,18 @@
         height: 100%;
         /* background-image: url("../images/simple-texture.png");
         background-size: contain; */
-        position: relative;
+        position: absolute;
     }
 
     #blankettext {
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        position: relative;
         z-index: -2;
-        width: 90vw;
-        height: 10vh;
+        width: 90%;
         margin: auto;
         margin-top: -25vh;
         font-size: 14px;
+        height: 35vh;
       }
-
-
-    /* #visiblanket {
-        height: 45vh;
-        width: 95vw;
-        margin-left: 30px;
-        margin-right: 30px;
-        margin-top: 30px;
-        margin-bottom: 20px;
-        position: relative;
-    }
-
-    #visibox {
-        width: max-content;
-        height: 100%;
-        /* background-image: url("../images/simple-texture.png");
-        background-size: contain; */
-        /* position: relative;
-        filter: blur(10px)
-    } */
 
     #discography {
         display: grid;
